# MPI_EXP

./: CMakeLists.txt
src/: CMakeLists.txt  calfunc.h  mpi_RTTtest.cpp  mpi_allreduce.cpp  mpi_bcast.cpp  mpi_gather.cpp  mpi_reduce.cpp  mpi_send_recv.cpp
